Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
reactos-bootcd-0.4.15-dev-4946-ge9a129c-x86-gcc-lin-dbg
- Put files in the Recycle Bin
- Select at least one then DEL (keyboard) =>Assert.
Assertion raised :

Does not assert with using Right click context menu but leads to CORE-18359
err:(win32ss/user/user32/windows/messagebox.c:1048) MessageBox: L"Debug Assertion Failed!\n\nFile: /srv/buildbot/worker_data/Build_GCCLin_x86/build/sdk/lib/atl/atlcomcli.h\nLine: 167\n\np == 0\n\n(Press Retry to debug the application)" |
CExtractIcon.cpp:373: Unexpected failure (hr)=80004005. |
CExtractIcon.cpp:373: Unexpected failure (hr)=80004005. |
Unhandled exception
|
ExceptionCode: 80000003 |
CS:EIP 1b:7adea6e5
|
DS 23 ES 23 FS 3b GS 0 |
EAX: 00000001 EBX: 002b6f90 ECX: 00000001 |
EDX: 00000000 EBP: 01a0fb6c ESI: 00007011 ESP: 01a0fb3c |
EDI: 7adeacf8 EFLAGS: 00000246 |
Address:
|
* <shell32.dll:8a6e5 (sdk/include/crt/mingw32/intrin_x86.h:1678 (CDefView::OnExplorerCommand))> (C:\ReactOS\system32\shell32.dll@7ad60000) |
Frames:
|
* <shell32.dll:8a9e1 (dll/win32/shell32/CDefView.cpp:1924 (CDefView::OnCommand))> (C:\ReactOS\system32\shell32.dll@7ad60000) |
* <shell32.dll:f0d52 (dll/win32/shell32/CDefView.cpp:337 (CDefView::ProcessWindowMessage))> (C:\ReactOS\system32\shell32.dll@7ad60000) |
* <shell32.dll:edf88 (sdk/lib/atl/atlwin.h:1626 (CWindowImplBaseT<ATL::CWindow, ATL::CWinTraits<1442840576, 0> >::WindowProc))> (C:\ReactOS\system32\shell32.dll@7ad60000) |
* <shell32.dll:f0a12 (dll/win32/shell32/CDefView.cpp:323 (CDefView::WindowProc))> (C:\ReactOS\system32\shell32.dll@7ad60000) |
* <user32.dll:6a416 (win32ss/user/user32/windows/wndproc_fixup.S:48 (CALL_EXTERN_WNDPROC))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <user32.dll:5e774 (win32ss/user/user32/windows/message.c:1547 (IntCallWindowProcW))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <user32.dll:605bb (win32ss/user/user32/windows/message.c:3015 (User32CallWindowProcFromKernel))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <ntdll.dll:100d9 (dll/ntdll/dispatch/i386/dispatch.S:142 (KiUserCallbackDispatcher))> (C:\ReactOS\System32\ntdll.dll@7c920000) |
* <shell32.dll:89711 (dll/win32/shell32/CDefView.cpp:2497 (CDefView::TranslateAcceleratorW))> (C:\ReactOS\system32\shell32.dll@7ad60000) |
* <browseui.dll:388ad (dll/win32/browseui/shellbrowser.cpp:2891 (CShellBrowser::v_MayTranslateAccelerator))> (C:\ReactOS\System32\browseui.dll@78970000) |
* <browseui.dll:2c314 (dll/win32/browseui/desktopipc.cpp:406 (BrowserThreadProc))> (C:\ReactOS\System32\browseui.dll@78970000) |
* <kernel32.dll:1c980 (dll/win32/kernel32/client/thread.c:71 (BaseThreadStartup))> (C:\ReactOS\system32\kernel32.dll@7c620000) |
Attachments
Issue Links
- is blocked by
-
CORE-18613 Cannot open more than one Disk properties dialog with context menu
-
- Resolved
-
- is duplicated by
-
CORE-18260 ASSERT failed when trying to remove a non-refreshed restored item from RecycleBin
-
- Resolved
-
-
CORE-18321 Assert on folder copy then right click on Desktop
-
- Resolved
-
-
CORE-18430 Explorer : ASSERT when enabling Automatic Sort
-
- Resolved
-